# srcML

./: BUILD.md  CMakeLists.txt  compose.yml  docker-bake.hcl  docker-bake.override.hcl  vcpkg.json
.github/workflows/: Build.yml  BuildWindows.yml  ClangBuildAnalysis.yml  Test.yml  TestClient.yml  TestFedora.yml  TestLibsrcml.yml  TestParser.yml
doc/doxygen/: CMakeLists.txt
doc/manpage/: CMakeLists.txt  srcml.cfg
docker/fedora/: Dockerfile
docker/opensuse/: Dockerfile
docker/ubuntu/: Dockerfile
examples/libsrcml/: CMakeLists.txt  srcml_srcql.cpp
package/: CMakeLists.txt  WIX.template.in  debian-cpack.cmake  fixnames.cmake  install_dir.wxs  nsis.cmake  patch_path_env.xml  rpm.cmake  srcml_extra_dialog.wxs
presets/: CMakeBasePresets.json  CMakeMSVCPresets.json  CMakeMacOSPresets.json  CMakeRPMPresets.json
src/: CMakeLists.txt
src/client/: CMakeLists.txt  ParseRequest.hpp  XCPUCount.cpp  compress_srcml.cpp  create_src.cpp  create_srcml.cpp  ctpl_stl.patch  decompress_srcml.cpp  input_curl.cpp  src_input_libarchive.cpp  srcml.cpp  srcml_cli.cpp  srcml_cli.hpp  srcml_options.cpp  srcml_options.hpp  srcml_pretty.hpp
src/libsrcml/: CMakeLists.txt  language_extension_registry.cpp  libsrcml.cpp  libsrcml.version  libsrcql.cpp  qli_extensions.cpp  sax2_srcsax_handler.hpp  srcml.h  srcml_reader_handler.hpp  srcml_transform.cpp  srcml_translator.cpp  srcml_types.hpp  srcml_unit.cpp  srcql.hpp  unification_table.cpp  unit_utilities.cpp  xpathTransformation.cpp  xpath_generator.cpp  xpath_generator.hpp  xpath_node.cpp  xpath_node.hpp
src/parser/: CMakeLists.txt  CommentTextLexer.g  DocstringPython.cpp  DocstringPython.hpp  KeywordLexer.g  Language.cpp  Language.hpp  Mode.cpp  Mode.hpp  NewlineTerminatePython.cpp  NewlineTerminatePython.hpp  OffSideRule.cpp  OffSideRule.hpp  OperatorLexer.g  Position.hpp  StreamMLParser.hpp  TextLexer.g  UTF8CharBuffer.cpp  UTF8CharBuffer.hpp  srcMLOutput.hpp  srcMLOutputElements.hpp  srcMLParser.g  srcMLToken.hpp  srcml_bitset_token_sets.hpp
test/: CMakeLists.txt
test/client/: CMakeLists.txt
test/client/testsuite/: archive.sh  cli_test_example.sh  cpp_file.sh  cpp_java.sh  cpp_markup_if0_archive_multi.sh  cpp_markup_if0_archive_single.sh  cpp_markup_if0_file.sh  cpp_markup_if0_single.sh  cpp_nomarkup_else_archive_multi.sh  cpp_nomarkup_else_archive_single.sh  cpp_nomarkup_else_file.sh  directory_input.sh  empty_stdin.sh  expression.sh  files_from.sh  files_from_invalid.sh  files_from_srcml.sh  files_from_srcml_uri.sh  files_from_uri.sh  framework_test.sh  header_archive.sh  implicit_output.sh  implicit_relaxng_archive.sh  implicit_relaxng_unit.sh  implicit_xslt_identity_archive_multi.sh  implicit_xslt_identity_archive_single.sh  implicit_xslt_identity_unit.sh  info_unit.sh  input_bz2.sh  input_bz2_gz.sh  input_cpio.sh  input_cpio_bz2.sh  input_cpio_gz.sh  input_gz.sh  input_gz_bz2.sh  input_tar.sh  input_tar_bz2.sh  input_tar_gz.sh  input_tbz2.sh  input_tgz.sh  (+126 more)
test/libsrcml/: CMakeLists.txt
test/libsrcml/testsuite/: CMakeLists.txt  setlanguage.xsl  test_srcml_global.cpp  test_srcql.cpp
test/parser/: CMakeLists.txt
test/parser/testsuite/: CMakeLists.txt  abstract_cs.cs.xml  accessor_cs.cs.xml  alias_py.py.xml  alignof.cpp.xml  alignof_c.c.xml  annotation_py.py.xml  annotations_java.java.xml  anonymous_class_java.java.xml  argument_py.py.xml  array_py.py.xml  asm.cpp.xml  assert_java.java.xml  assert_py.py.xml  async_cs.cs.xml  atomic_c.c.xml  attribute_py.py.xml  attributes_cpp.cpp.xml  attributes_cs.cs.xml  auto.cpp.xml  auto_cpp.cpp.xml  autoreleasepool_m.m.xml  block_lambda.cpp.xml  block_py.py.xml  break.cpp.xml  break_py.py.xml  c_cpp_mode_catch.cpp.xml  c_cpp_mode_class.cpp.xml  c_cpp_mode_mutable.cpp.xml  c_cpp_mode_restrict.cpp.xml  c_cpp_mode_try.cpp.xml  call.cpp.xml  call_c.c.xml  call_cpp.cpp.xml  call_cs.cs.xml  call_ns.cpp.xml  call_py.py.xml  case_py.py.xml  cast_c.c.xml  cast_cpp.cpp.xml  (+256 more)
